--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Hey Akshu ❤️</title>
+<title>SUPPP CUTIE PIEE❤️</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
@@ -201,7 +201,7 @@ button{
 </div>
 
 <div id="successMessage">
-  YAYYY 💍💖 You just made me the happiest person alive!!! 🥰
+  Sooo when can i hit 😛
 </div>
 
 <audio id="bgMusic" loop preload="auto">
