--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Hey Akshu ❤️</title>
 
-<!-- Enhanced Romantic + Cute Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@300;500;700&family=Pacifico&family=Quicksand:wght@400;600&family=Dancing+Script:wght@400;700&family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box;}
@@ -17,21 +16,9 @@ body{
   text-align:center;
   overflow-x:hidden;
   background:linear-gradient(135deg,#ff4e88,#ff1e56,#ff6fa3);
-  position:relative;
 }
 
-/* Subtle heart texture overlay for depth */
-body::before{
-  content:'';
-  position:fixed;
-  top:0;left:0;width:100%;height:100%;
-  background-image:url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><text fill="rgba(255,255,255,0.05)" font-size="50" y="50%">💖</text></svg>');
-  background-size:100px 100px;
-  pointer-events:none;
-  z-index:-1;
-}
-
-/* ENTRY SCREEN - Enhanced with fade-out animation */
+/* ENTRY SCREEN */
 #introScreen{
   position:fixed;
   inset:0;
@@ -43,206 +30,130 @@ body::before{
   z-index:9999;
   padding:20px;
   cursor:pointer;
-  transition:opacity 0.5s ease, transform 0.5s ease;
-}
-#introScreen.fade-out{
-  opacity:0;
-  transform:scale(1.1);
 }
 #introScreen h2{
-  font-family:'Dancing Script', cursive; /* More elegant, handwritten feel */
-  font-size:3rem;
-  font-weight:700;
-}
-#introScreen p{
-  margin-top:15px;
-  font-size:1.1rem;
-  opacity:0.9;
-  font-family:'Montserrat', sans-serif; /* Clean contrast */
+  font-family:'Pacifico',cursive;
+  font-size:2.5rem;
 }
 
-/* FLOATING HEART BACKGROUND - More organic movement */
+/* Floating background hearts */
 .bg-heart{
   position:fixed;
-  font-size:24px;
+  font-size:22px;
   animation:floatBg linear infinite;
-  opacity:0.3;
-  filter:blur(0.5px); /* Soft glow */
+  opacity:0.25;
 }
 @keyframes floatBg{
-  0%{transform:translateY(100vh) rotate(0deg);}
-  50%{transform:translateY(50vh) rotate(180deg);}
-  100%{transform:translateY(-120vh) rotate(360deg);}
+  from{transform:translateY(100vh)}
+  to{transform:translateY(-120vh)}
 }
 
-header{
-  padding:60px 15px 20px;
-  position:relative;
-  z-index:1;
-}
+header{padding:60px 15px 20px}
 h1{
   font-family:'Pacifico',cursive;
-  font-size:3.5rem;
-  letter-spacing:2px;
-  text-shadow:0 4px 15px rgba(0,0,0,0.3), 0 0 20px rgba(255,255,255,0.2); /* Enhanced glow */
+  font-size:3rem;
+  text-shadow:0 4px 12px rgba(0,0,0,0.25);
 }
 
-/* TIMER - Cleaner font and better styling */
+/* TIMER */
 .timer{
-  margin-top:20px;
-  font-size:1.1rem;
+  margin-top:15px;
+  font-size:1.05rem;
   font-weight:600;
-  background:rgba(255,255,255,0.2);
+  background:rgba(255,255,255,0.15);
   display:inline-block;
-  padding:12px 20px;
-  border-radius:25px;
-  backdrop-filter:blur(10px);
-  box-shadow:0 4px 12px rgba(0,0,0,0.15);
-  font-family:'Montserrat', sans-serif; /* Modern, readable */
+  padding:10px 18px;
+  border-radius:20px;
+  backdrop-filter:blur(8px);
 }
 
 .message{
-  margin:30px auto;
-  max-width:700px;
-  background:rgba(255,255,255,0.15);
-  padding:25px;
-  border-radius:25px;
-  backdrop-filter:blur(12px);
-  line-height:1.8;
-  font-size:1.2rem;
-  box-shadow:0 6px 20px rgba(0,0,0,0.2);
-  border:1px solid rgba(255,255,255,0.1);
-  font-family:'Dancing Script', cursive; /* Romantic, flowing text */
-}
-
-/* MEMORY CARDS - Better hover and spacing */
-.memories{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(160px,1fr));
-  gap:20px;
+  margin:25px auto;
+  max-width:650px;
+  background:rgba(255,255,255,0.12);
   padding:20px;
-  max-width:900px;
-  margin:auto;
-}
-.card{
-  background:rgba(255,255,255,0.2);
   border-radius:20px;
-  padding:20px;
-  backdrop-filter:blur(15px);
-  transition:0.4s ease;
-  font-weight:600;
-  font-size:1.1rem;
-  box-shadow:0 4px 15px rgba(0,0,0,0.1);
-  border:1px solid rgba(255,255,255,0.1);
-  font-family:'Montserrat', sans-serif;
-}
-.card:hover{
-  transform:translateY(-8px) scale(1.08);
-  box-shadow:0 12px 30px rgba(0,0,0,0.25);
-  background:rgba(255,255,255,0.25);
+  backdrop-filter:blur(10px);
+  line-height:1.7;
+  font-size:1.15rem;
 }
 
-/* PHOTO GALLERY - Improved grid and effects */
-.gallery{ padding:40px 15px; }
-.gallery h2{
-  font-family:'Pacifico',cursive;
-  font-size:2.5rem;
-  margin-bottom:20px;
-  text-shadow:0 2px 10px rgba(0,0,0,0.2);
-}
-.photos{
+.memories{
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(140px,1fr));
   gap:18px;
-  max-width:900px;
+  padding:20px;
+  max-width:800px;
+  margin:auto;
+}
+.card{
+  background:rgba(255,255,255,0.18);
+  border-radius:18px;
+  padding:18px;
+  backdrop-filter:blur(12px);
+  font-weight:600;
+}
+
+.gallery{ padding:30px 15px; }
+.gallery h2{
+  font-family:'Pacifico',cursive;
+  font-size:2rem;
+  margin-bottom:15px;
+}
+.photos{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(120px,1fr));
+  gap:15px;
+  max-width:800px;
   margin:auto;
 }
 .photos img{
   width:100%;
-  border-radius:18px;
+  border-radius:15px;
   object-fit:cover;
   aspect-ratio:1/1;
-  transition:0.4s ease;
-  box-shadow:0 4px 12px rgba(0,0,0,0.15);
-  border:2px solid rgba(255,255,255,0.2);
-}
-.photos img:hover{
-  transform:scale(1.1) rotate(2deg);
-  box-shadow:0 8px 25px rgba(0,0,0,0.3);
 }
 
-/* BUTTONS - Enhanced with better fonts and effects */
+/* BUTTONS */
 .buttons{
-  margin:60px auto;
+  margin:50px auto;
   display:flex;
   justify-content:center;
-  gap:30px;
-  flex-wrap:wrap;
+  gap:25px;
 }
 
 button{
-  padding:22px 50px;
-  font-size:1.5rem;
+  padding:20px 45px;
+  font-size:1.4rem;
   border:none;
-  border-radius:50px;
-  font-weight:700;
+  border-radius:45px;
+  font-weight:bold;
   cursor:pointer;
-  box-shadow:0 8px 25px rgba(0,0,0,0.3);
-  transition:transform 0.3s ease, box-shadow 0.3s ease;
-  font-family:'Montserrat', sans-serif;
-  letter-spacing:1px;
-  position:relative;
-  overflow:hidden;
+  box-shadow:0 8px 20px rgba(0,0,0,0.25);
+  transition:transform 0.2s ease;
 }
 
-button::before{
-  content:'';
-  position:absolute;
-  top:0;left:-100%;
-  width:100%;height:100%;
-  background:linear-gradient(90deg,transparent,rgba(255,255,255,0.3),transparent);
-  transition:left 0.5s;
-}
-button:hover::before{left:100%;}
-
-#yesBtn{
-  background:linear-gradient(45deg,#fff,#f8f8f8);
-  color:#ff1e56;
-  border:2px solid rgba(255,255,255,0.5);
-}
-#noBtn{
-  background:linear-gradient(45deg,#ff1e56,#ff4e88);
-  color:white;
-}
+#yesBtn{background:white;color:#ff1e56;}
+#noBtn{background:#ff1e56;color:white;}
 
 #successMessage{
   display:none;
-  font-size:1.8rem;
-  margin:25px;
+  font-size:1.6rem;
+  margin:20px;
   animation:fadeIn 1s forwards;
-  font-family:'Dancing Script', cursive;
-  text-shadow:0 2px 10px rgba(0,0,0,0.2);
 }
-@keyframes fadeIn{from{opacity:0;transform:translateY(20px);}to{opacity:1;transform:translateY(0);}}
+@keyframes fadeIn{from{opacity:0;}to{opacity:1;}}
 
-/* Fireworks - More vibrant */
-@keyframes explode{
-  0%{transform:scale(0);opacity:1;}
-  50%{transform:scale(1.5);opacity:0.8;}
-  100%{transform:scale(2.5);opacity:0;}
+/* Faster Firework Explosion */
+@keyframes explode {
+  0% { transform: scale(0); opacity: 1; }
+  50% { transform: scale(1.5); opacity: 1; }
+  100% { transform: scale(2.5); opacity: 0; }
 }
 
-/* Roses - Smoother fall */
-@keyframes fall{
-  0%{transform:translateY(-20px) rotate(0deg);}
-  100%{transform:translateY(110vh) rotate(360deg);opacity:0;}
-}
-
-@media(max-width:600px){
-  h1{font-size:2.8rem}
-  .message{font-size:1rem;padding:20px;}
-  .card{font-size:1rem;}
-  button{font-size:1.2rem;padding:18px 40px;}
+/* Faster Falling Roses */
+@keyframes fall {
+  to { transform: translateY(110vh); opacity: 0; }
 }
 </style>
 </head>
@@ -268,21 +179,21 @@ button:hover::before{left:100%;}
 </div>
 
 <div class="memories">
-  <div class="card">🛵<br>Scooter Rides</div>
-  <div class="card">🗣️<br>Our Small Talks</div>
-  <div class="card">😘<br>All the Kisses</div>
-  <div class="card">🧔<br>The Goatee</div>
+  <div class="card">🛵 Scooter Rides</div>
+  <div class="card">🗣️ Our Small Talks</div>
+  <div class="card">😘 All the Kisses</div>
+  <div class="card">🧔 The Goatee</div>
 </div>
 
 <div class="gallery">
   <h2>Our Cute Memories 📸</h2>
   <div class="photos">
-    <img src="photo1.jpeg" alt="Memory 1">
-    <img src="photo2.jpeg" alt="Memory 2">
-    <img src="photo3.jpeg" alt="Memory 3">
-    <img src="photo4.jpeg" alt="Memory 4">
-    <img src="photo5.jpeg" alt="Memory 5">
-    <img src="photo6.jpeg" alt="Memory 6">
+    <img src="photo1.jpeg">
+    <img src="photo2.jpeg">
+    <img src="photo3.jpeg">
+    <img src="photo4.jpeg">
+    <img src="photo5.jpeg">
+    <img src="photo6.jpeg">
   </div>
 </div>
 
@@ -301,11 +212,9 @@ button:hover::before{left:100%;}
 
 <script>
 const music=document.getElementById("bgMusic");
-const introScreen=document.getElementById("introScreen");
-introScreen.addEventListener("click",()=>{
+document.getElementById("introScreen").addEventListener("click",()=>{
   music.play();
-  introScreen.classList.add("fade-out");
-  setTimeout(()=>{introScreen.style.display="none";},500);
+  document.getElementById("introScreen").style.display="none";
 });
 
 /* Valentine Countdown */
@@ -313,85 +222,80 @@ function updateValentineTimer() {
   const now = new Date();
   const currentYear = now.getFullYear();
   let valentine = new Date(`February 14, ${currentYear} 00:00:00`);
-  if (now > valentine) {
-    valentine = new Date(`February 14, ${currentYear + 1} 00:00:00`);
-  }
+  if (now > valentine) valentine = new Date(`February 14, ${currentYear + 1} 00:00:00`);
   const diff = valentine - now;
   const days = Math.floor(diff / (1000 * 60 * 60 * 24));
   const hours = Math.floor((diff / (1000 * 60 * 60)) % 24);
   const minutes = Math.floor((diff / (1000 * 60)) % 60);
   const seconds = Math.floor((diff / 1000) % 60);
-
   document.getElementById("valentineTimer").innerHTML =
     `⏳ Countdown to Valentine’s Day:<br>${days}d ${hours}h ${minutes}m ${seconds}s 💖`;
 }
 setInterval(updateValentineTimer, 1000);
 updateValentineTimer();
 
-/* Floating background hearts - Slightly faster and more varied */
+/* Floating background hearts */
 function createBgHeart(){
   const heart=document.createElement("div");
   heart.className="bg-heart";
   heart.innerHTML="💖";
   heart.style.left=Math.random()*100+"vw";
-  heart.style.animationDuration=(Math.random()*4+4)+"s";
+  heart.style.animationDuration=(Math.random()*5+5)+"s";
   document.body.appendChild(heart);
-  setTimeout(()=>heart.remove(),8000);
+  setTimeout(()=>heart.remove(),10000);
 }
-setInterval(createBgHeart,400);
+setInterval(createBgHeart,500);
 
-/* Button size game - Smoother scaling */
+/* Button size game */
 const yesBtn=document.getElementById("yesBtn");
 const noBtn=document.getElementById("noBtn");
 let yesScale=1;
 let noScale=1;
 
 noBtn.addEventListener("click",()=>{
-  yesScale+=0.2;
-  noScale-=0.12;
-  if(noScale<0.3) noScale=0.3;
-
+  yesScale+=0.15;
+  noScale-=0.1;
+  if(noScale<0.4) noScale=0.4;
   yesBtn.style.transform=`scale(${yesScale})`;
   noBtn.style.transform=`scale(${noScale})`;
 });
 
-/* Yes celebration - Enhanced with more effects */
-const successMessage=document.getElementById("successMessage");
+/* YES Celebration */
 yesBtn.addEventListener("click",()=>{
-  successMessage.style.display="block";
+  document.getElementById("successMessage").style.display="block";
   launchFireworks();
   startRoseShower();
 });
 
-/* Fireworks - More particles */
+/* FASTER FIREWORKS */
 function launchFireworks(){
-  for(let i=0;i<80;i++){
+  for(let i=0;i<90;i++){
     const fw=document.createElement("div");
     fw.innerHTML="✨";
     fw.style.position="fixed";
     fw.style.left=Math.random()*100+"vw";
     fw.style.top=Math.random()*100+"vh";
-    fw.style.fontSize=Math.random()*25+20+"px";
-    fw.style.animation="explode 1.2s ease-out forwards";
+    fw.style.fontSize=Math.random()*25+18+"px";
+    fw.style.animation="explode 0.6s ease-out forwards";
     document.body.appendChild(fw);
-    setTimeout(()=>fw.remove(),1200);
+    setTimeout(()=>fw.remove(),600);
   }
 }
 
-/* Rose Rain - Longer duration */
+/* HEAVIER FASTER ROSES */
 function startRoseShower(){
   let interval=setInterval(()=>{
     const rose=document.createElement("div");
     rose.innerHTML="🌹";
     rose.style.position="fixed";
-    rose.style.top="-20px";
+    rose.style.top="-30px";
     rose.style.left=Math.random()*100+"vw";
-    rose.style.fontSize="28px";
-    rose.style.animation="fall 6s linear forwards";
+    rose.style.fontSize=Math.random()*10+22+"px";
+    rose.style.animation="fall 3s linear forwards";
     document.body.appendChild(rose);
-    setTimeout(()=>rose.remove(),6000);
-  },80);
-  setTimeout(()=>clearInterval(interval),8000);
+    setTimeout(()=>rose.remove(),3000);
+  },50);
+  setTimeout(()=>clearInterval(interval),5000);
 }
 </script>
 
